--- a/pages/17751.html
+++ b/pages/17751.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -452,12 +452,12 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>:</mo><mi>H</mi><mo>→</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>A: H\to H</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/unbounded+operator'>unbounded operator</a> on a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math>. An unbounded operator <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>A^*</annotation></semantics></math> is its <strong><a class='existingWikiWord' href='/nlab/show/adjoint+operator'>adjoint</a></strong> if</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>:</mo><mi>H</mi><mo>→</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>A: H\to H</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/unbounded+operator'>unbounded operator</a> on a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math>. An unbounded operator <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>A^*</annotation></semantics></math> is its <strong><a class='existingWikiWord' href='/nlab/show/adjoint+operator'>adjoint</a></strong> if</p>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mi>x</mi><mo stretchy='false'>|</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>=</mo><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>|</mo><msup><mi>A</mi> <mo>*</mo></msup><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A x|y) = (x|A^*y)</annotation></semantics></math> for all <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>dom</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>x\in dom(A)</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi><mo>∈</mo><mi>dom</mi><mo stretchy='false'>(</mo><msup><mi>A</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>y\in dom(A^*)</annotation></semantics></math>; and</li>
+<li><math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mi>x</mi><mo stretchy='false'>|</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>=</mo><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>|</mo><msup><mi>A</mi> <mo>*</mo></msup><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A x|y) = (x|A^*y)</annotation></semantics></math> for all <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>dom</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>x\in dom(A)</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi><mo>∈</mo><mi>dom</mi><mo stretchy='false'>(</mo><msup><mi>A</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>y\in dom(A^*)</annotation></semantics></math>; and</li>
 
-<li>every <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> satisfying the above property for <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>A^*</annotation></semantics></math> is a restriction of <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</li>
+<li>every <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> satisfying the above property for <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>A^*</annotation></semantics></math> is a restriction of <math class='maruku-mathml' display='inline' id='mathml_33b491bec51fed25189645618acc411428344dca_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</li>
 </ul>
 
 <p>An adjoint does not need to exist in general.</p>
@@ -467,17 +467,20 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>self-adjoint operator</a></li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 11:33:09 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (129.12.18.176)
+  Revised on December 11, 2017 11:41:19 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/adjoint+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+operator/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/adjoint+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/adjoint+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+operator/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/adjoint+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
