--- a/pages/18840.html
+++ b/pages/18840.html
@@ -652,8 +652,8 @@ margin-left: 0em;
 
 <p>The concept of <em>noncommutative probability space</em> or <em>quantum probability space</em> is the generalization of that of <em><a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a></em> as the concept of “space” is generalized to <a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>non-commutative geometry</a>.</p>
 
-<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> dually in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_97e7e5dd0355bacd4aebf40024f44db344935d94_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, andencode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_97e7e5dd0355bacd4aebf40024f44db344935d94_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> dually in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_e9dcd6c5cdab64b54e8c08656ccaa6c097a7c936_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, andencode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e9dcd6c5cdab64b54e8c08656ccaa6c097a7c936_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle
     (-) 
   \rangle
@@ -664,11 +664,11 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_97e7e5dd0355bacd4aebf40024f44db344935d94_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> more implicit.</p>
+<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_e9dcd6c5cdab64b54e8c08656ccaa6c097a7c936_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> more implicit.</p>
 
-<p>Often <math class='maruku-mathml' display='inline' id='mathml_97e7e5dd0355bacd4aebf40024f44db344935d94_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_97e7e5dd0355bacd4aebf40024f44db344935d94_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
+<p>Often <math class='maruku-mathml' display='inline' id='mathml_e9dcd6c5cdab64b54e8c08656ccaa6c097a7c936_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_e9dcd6c5cdab64b54e8c08656ccaa6c097a7c936_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a> <math class='maruku-mathml' display='inline' id='mathml_97e7e5dd0355bacd4aebf40024f44db344935d94_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_97e7e5dd0355bacd4aebf40024f44db344935d94_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a> <math class='maruku-mathml' display='inline' id='mathml_e9dcd6c5cdab64b54e8c08656ccaa6c097a7c936_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_e9dcd6c5cdab64b54e8c08656ccaa6c097a7c936_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -704,6 +704,10 @@ margin-left: 0em;
 <li id='Attal'>
 <p>S. Attal, <em>Quantum probability</em> (<a href='http://math.univ-lyon1.fr/~attal/Quantum_Probability.pdf'>pdf</a>)</p>
 </li>
+
+<li id='Yuan12'>
+<p><a class='existingWikiWord' href='/nlab/show/Qiaochu+Yuan'>Qiaochu Yuan</a>, <em><a href='https://qchu.wordpress.com/2012/08/18/noncommutative-probability/'>Noncommutative probability</a></em>, 2012</p>
+</li>
 </ul>
 
 <p>
@@ -723,14 +727,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December 11, 2017 09:34:26 
+  Revised on December 11, 2017 11:10:02 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+probability/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/quantum+probability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+probability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
