--- a/pages/18842.html
+++ b/pages/18842.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      simple ring in nLab
+      Qiaochu Yuan in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      simple ring
+      Qiaochu Yuan
   </h1>
 
 
@@ -308,56 +308,46 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>A <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> is <strong>simple</strong> if it is it is a <a class='existingWikiWord' href='/nlab/show/simple+object'>simple object</a> in the category of <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/bimodule'>bimodules</a>.</p>
-
-<p>This can be stated in more elementary terms in any of the following equivalent ways:</p>
-
-<ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> is nontrivial and has no nontrivial two-sided <a class='existingWikiWord' href='/nlab/show/ideal'>ideal</a>s.</li>
-
-<li><math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> has exactly two two-sided ideals (which must be <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> itself and its <a class='existingWikiWord' href='/nlab/show/zero+ideal'>zero ideal</a>).</li>
+    <ul>
+<li><a href='https://math.berkeley.edu/people/grad/qiaochu-yuan'>webpage</a></li>
 </ul>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive</a> algebra, this is too strong; we must say:</p>
-
-<ul>
-<li>For each two-sided ideal <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>I</mi></mrow><annotation encoding='application/x-tex'>I</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>I</mi></mrow><annotation encoding='application/x-tex'>I</annotation></semantics></math> is the zero ideal if and only if <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>I</mi></mrow><annotation encoding='application/x-tex'>I</annotation></semantics></math> is proper (not equal to <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>).</li>
-</ul>
-
-<h2 id='examples'>Examples</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_7e666b08c86a7636cb34e05bd24762cc0910a8c1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p>A <a class='existingWikiWord' href='/nlab/show/field'>field</a>, or a <a class='existingWikiWord' href='/nlab/show/skewfield'>division ring</a>, is simple.</p>
+<p><a class='existingWikiWord' href='/nlab/show/rigid+object'>rigid object</a></p>
 </li>
 
 <li>
-<p>If <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a division ring, then the ring <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>M</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>D</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>M_n(D)</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>×</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>n \times n</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a> with entries in <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a simple ring.</p>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
 </li>
 
 <li>
-<p>The <a class='existingWikiWord' href='/nlab/show/Weyl+algebra'>Weyl algebra</a> <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo stretchy='false'>⟨</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>⟩</mo><mo stretchy='false'>/</mo><mo stretchy='false'>(</mo><mi>x</mi><mi>y</mi><mo>−</mo><mi>y</mi><mi>x</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>k\langle x, y\rangle/(x y - y x - 1)</annotation></semantics></math> over a field <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> is a simple ring. (In different language: this is the ring of differential operators with polynomial coefficients in one variable <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi></mrow><annotation encoding='application/x-tex'>t</annotation></semantics></math>, obtained as the image of the ring homomorphism from the noncommutative <a class='existingWikiWord' href='/nlab/show/polynomial'>polynomial ring</a> <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo stretchy='false'>⟨</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>k \langle x, y \rangle</annotation></semantics></math> to the ring of <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-linear endomorphisms <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Vect</mi><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>[</mo><mi>t</mi><mo stretchy='false'>]</mo><mo>,</mo><mi>k</mi><mo stretchy='false'>[</mo><mi>t</mi><mo stretchy='false'>]</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Vect(k[t], k[t])</annotation></semantics></math> that sends <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> to the derivative operator <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_22' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mi>d</mi><mrow><mi>d</mi><mi>t</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>\frac{d}{d t}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_23' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math> to the multiplication operator <math class='maruku-mathml' display='inline' id='mathml_f1b464709fde0031e1fbe4cda12bb0286fb0c3b1_24' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>⋅</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo></mrow><annotation encoding='application/x-tex'>t \cdot -</annotation></semantics></math>.) An explanation of why this is simple may be found <a href='https://qchu.wordpress.com/2012/05/30/the-jacobson-radical/'>here</a> at <a class='existingWikiWord' href='/nlab/show/Qiaochu+Yuan'>Qiaochu Yuan</a>’s blog.</p>
+<p><a class='existingWikiWord' href='/nlab/show/simple+ring'>simple ring</a></p>
 </li>
 </ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on December 11, 2017 11:10:54 
+  Created on December 11, 2017 11:13:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/simple+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/simple+ring/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/simple+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/simple+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Qiaochu+Yuan" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/simple+ring" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Qiaochu+Yuan" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/simple+ring" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Qiaochu+Yuan" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/simple+ring" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Qiaochu+Yuan" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
