--- a/pages/7168.html
+++ b/pages/7168.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -558,24 +558,26 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> or more generally a <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/module'>module</a>, then a <em>quadratic form</em> on <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo lspace='verythinmathspace'>:</mo><mi>V</mi><mo>→</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> or more generally a <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/module'>module</a>, then a <em>quadratic form</em> on <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo lspace='verythinmathspace'>:</mo><mi>V</mi><mo>→</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>
   q\colon V \to k
 
 </annotation></semantics></math></div>
-<p>which is <a class='existingWikiWord' href='/nlab/show/homogeneous+function'>homogeneous</a> of degree 2 in that for all <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>v \in V</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>∈</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>t \in k</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo stretchy='false'>(</mo><mi>t</mi><mi>v</mi><mo stretchy='false'>)</mo><mo>=</mo><msup><mi>t</mi> <mn>2</mn></msup><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>which is <a class='existingWikiWord' href='/nlab/show/homogeneous+function'>homogeneous</a> of degree 2 in that for all <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>v \in V</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>∈</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>t \in k</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo stretchy='false'>(</mo><mi>t</mi><mi>v</mi><mo stretchy='false'>)</mo><mo>=</mo><msup><mi>t</mi> <mn>2</mn></msup><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   q(t v) = t^2 q(v)
 
 </annotation></semantics></math></div>
-<p>and such that the <em><a class='existingWikiWord' href='/nlab/show/polarization+identity'>polarization</a></em> of <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi></mrow><annotation encoding='application/x-tex'>q</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>v</mi><mo>,</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo>+</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>−</mo><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>−</mo><mi>q</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>and such that the <em><a class='existingWikiWord' href='/nlab/show/polarization+identity'>polarization</a></em> of <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi></mrow><annotation encoding='application/x-tex'>q</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>v</mi><mo>,</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo>+</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>−</mo><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>−</mo><mi>q</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   (v,w) \mapsto q(v+w) - q(v) - q(w) 
 
 </annotation></semantics></math></div>
 <p>is a <a class='existingWikiWord' href='/nlab/show/bilinear+form'>bilinear form</a>.</p>
 
-<p>From the converse point of view, <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi></mrow><annotation encoding='application/x-tex'>q</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/quadratic+refinement'>quadratic refinement</a> of the bilinear form <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-,-)</annotation></semantics></math>. (This always exists uniquely if <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn><mo>∈</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>2 \in k</annotation></semantics></math> is invertible, but in general the question involves the <a class='existingWikiWord' href='/nlab/show/characteristic+element+of+a+bilinear+form'>characteristic elements</a> of <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>u</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-u,-)</annotation></semantics></math>. See there for more.)</p>
+<p>From the converse point of view, <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi></mrow><annotation encoding='application/x-tex'>q</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/quadratic+refinement'>quadratic refinement</a> of the bilinear form <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-,-)</annotation></semantics></math>. (This always exists uniquely if <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn><mo>∈</mo><mi>k</mi></mrow><annotation encoding='application/x-tex'>2 \in k</annotation></semantics></math> is invertible, but in general the question involves the <a class='existingWikiWord' href='/nlab/show/characteristic+element+of+a+bilinear+form'>characteristic elements</a> of <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>u</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-u,-)</annotation></semantics></math>. See there for more.)</p>
+
+<p>Quadratic forms with values in the <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a> <code class='maruku-mathml'>k = \mathbb[R}</code> are called <em>positive define</em> or <em>negative definite</em> if <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>k = \mathbb[q(v) \gt 0</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>&lt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>q(v) \lt 0</annotation></semantics></math>, respectively, for all <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>≠</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>v \neq 0</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -612,7 +614,7 @@ margin-left: 0em;
 <p>The terminology “form” possibly originated with</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Leonhard+Euler'>Leonhard Euler</a>, <em>Novae demonstrations circa divisors numerorum formae <math class='maruku-mathml' display='inline' id='mathml_5c4c427632a86a048db94e895d5c801ea4513bfb_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mi>x</mi><mo>+</mo><mi>n</mi><mi>y</mi><mi>y</mi></mrow><annotation encoding='application/x-tex'>x x + n y y</annotation></semantics></math>…</em>, Acad. Petrop. recitata, Nov 20, 1775, published poshumously</li>
+<li><a class='existingWikiWord' href='/nlab/show/Leonhard+Euler'>Leonhard Euler</a>, <em>Novae demonstrations circa divisors numerorum formae <math class='maruku-mathml' display='inline' id='mathml_fdb0f819c8248f85bcf91cd4d497eb38b5c2cec0_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mi>x</mi><mo>+</mo><mi>n</mi><mi>y</mi><mi>y</mi></mrow><annotation encoding='application/x-tex'>x x + n y y</annotation></semantics></math>…</em>, Acad. Petrop. recitata, Nov 20, 1775, published poshumously</li>
 </ul>
 
 <p>(which is cited as such in <a href='#Gauss1798'>Gauss 1798, paragraph 151</a>).</p>
@@ -663,7 +665,28 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Michael+Hopkins'>Mike Hopkins</a>, <a class='existingWikiWord' href='/nlab/show/Isadore+Singer'>Isadore Singer</a>, <em><a class='existingWikiWord' href='/nlab/show/Quadratic+Functions+in+Geometry%2C+Topology%2C+and+M-Theory'>Quadratic Functions in Geometry, Topology, and M-Theory</a></em></li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Quadratic_form'>Quadratic form</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Definite_quadratic_form'>Definitine quadratic form</a></em></p>
+</li>
+</ul>
+
 <p>
+ 
+</p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
  
 </p>
 
@@ -673,19 +696,26 @@ margin-left: 0em;
 
 <p>
  
+</p>
+
+<p>
+ 
+</p>
+
+<p>
  
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on November 23, 2017 07:15:15 
+  Revised on December 11, 2017 11:53:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.49.59)
+  (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quadratic+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quadratic+form/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/quadratic+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quadratic+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quadratic+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quadratic+form/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/quadratic+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quadratic+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
